--- a/Pyproject.toml
+++ b/Pyproject.toml
@@ -17,6 +17,8 @@ google-auth-httplib2 = "0.2.0"
 hvac = "^2.3.0"
 jupyter = "^1.1.1"
 pandas = "^2.2.3"
+minio = "^7.2.15"
+python-dotenv = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
