--- a/src/data_ingestion/requirements.txt
+++ b/src/data_ingestion/requirements.txt
@@ -5,3 +5,5 @@ pandas==2.2.3
 google-api-python-client==2.166.0
 google-auth-oauthlib==1.2.1
 google-auth-httplib2==0.2.0
+minio==7.2.15
+python-dotenv==1.1.0
