--- a/Pyproject.toml
+++ b/Pyproject.toml
@@ -19,6 +19,7 @@ jupyter = "^1.1.1"
 pandas = "^2.2.3"
 minio = "^7.2.15"
 python-dotenv = "^1.1.0"
+requests = "^2.32.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
