--- a/Pyproject.toml
+++ b/Pyproject.toml
@@ -7,10 +7,10 @@ license = "MIT"
 package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.13"
+python = "3.12.*"
 pyspark = "^3.5.5"
 pydantic = "^2.11.1"
-flask = "^3.1.0"
+flask = "^2.2.5"
 google-api-python-client = "^2.166.0"
 google-auth-oauthlib = "^1.2.1"
 google-auth-httplib2 = "0.2.0"
@@ -20,6 +20,8 @@ pandas = "^2.2.3"
 minio = "^7.2.15"
 python-dotenv = "^1.1.0"
 requests = "^2.32.3"
+apache-airflow = "^2.10.5"
+apache-airflow-providers-docker = "^4.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
