--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,5 +1,9 @@
 version: '3.8'
 
+networks:
+  bridge-network:
+    driver: bridge
+
 x-airflow-common:
   &airflow-common
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
@@ -30,6 +34,8 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
     - ${AIRFLOW_PROJ_DIR:-.}/config:/opt/airflow/config
     - ${AIRFLOW_PROJ_DIR:-.}/plugins:/opt/airflow/plugins
+  networks:
+    - bridge-network
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
@@ -56,6 +62,8 @@ services:
       - VAULT_ADDR=http://0.0.0.0:8200
       - VAULT_API_ADDR=http://0.0.0.0:8200
       - VAULT_ADDRESS=http://0.0.0.0:8200
+    networks:
+      - bridge-network
     cap_add:
       - IPC_LOCK
     command: vault server -config=/vault/config/config.hcl
@@ -77,29 +85,8 @@ services:
       - ./utils:/app/utils
     env_file:
       - ./.env
-
-  data_engineering:
-    build:
-      context: ./data_engineering
-      dockerfile: Dockerfile
-      tags:
-        - "data_engineering:v1.0"
-    container_name: data_engineering
-    restart: always
-    depends_on:
-      - minio
-      - vault
-    environment:
-      - SPARK_MASTER_HOST=spark-master
-    volumes:
-      - ./data_engineering:/app
-      - ./utils:/app/utils
-    env_file:
-      - ./.env
-    ports:
-      - 4040:4040
-    stdin_open: true
-    tty: true
+    networks:
+      - bridge-network
 
   flask_app:
     build:
@@ -119,12 +106,13 @@ services:
       - ./utils:/app/utils
     env_file:
       - ./.env
+    networks:
+      - bridge-network
 
   minio:
-    image: quay.io/minio/minio
-    container_name: minio1
+    image: bitnami/minio:2025.4.3
+    container_name: minio
     restart: unless-stopped
-    user: "${UID}:${GID}"  # Dynamically set user ID and group ID
     environment:
       MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
       MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
@@ -134,7 +122,52 @@ services:
     volumes:
       - ./minio/data:/data
       - ./utils:/app/utils
+    networks:
+      - bridge-network
     command: server /data --console-address ":9001"
+  
+  spark:
+    image: bitnami/spark:3.5.5
+    environment:
+      - SPARK_MODE=master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    ports:
+      - '8082:8080'
+      - '7077:7077'
+    networks:
+      - bridge-network
+    depends_on:
+      - minio
+    volumes:
+      - ./data_engineering:/opt/bitnami/spark/data_engineering
+      - ./utils:/opt/bitnami/spark/utils
+    env_file:
+      - ./.env
+  spark-worker:
+    image: bitnami/spark:3.5.5
+    environment:
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark:7077
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_CORES=2
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - bridge-network
+    depends_on:
+      - spark
+      - minio
+    volumes:
+      - ./data_engineering:/opt/bitnami/spark/data_engineering
+      - ./utils:/opt/bitnami/spark/utils
+    env_file:
+      - ./.env
+
 
   postgres:
     image: postgres:13
@@ -150,6 +183,8 @@ services:
       retries: 5
       start_period: 5s
     restart: always
+    networks:
+      - bridge-network
 
   redis:
     image: redis:latest
@@ -162,6 +197,8 @@ services:
       retries: 50
       start_period: 30s
     restart: always
+    networks:
+      - bridge-network
 
   airflow-webserver:
     <<: *airflow-common
@@ -179,6 +216,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - bridge-network
 
   airflow-scheduler:
     <<: *airflow-common
@@ -194,6 +233,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - bridge-network
 
   airflow-worker:
     <<: *airflow-common
@@ -217,6 +258,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - bridge-network
 
   airflow-triggerer:
     <<: *airflow-common
@@ -232,6 +275,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - bridge-network
 
   airflow-init:
     <<: *airflow-common
@@ -296,6 +341,8 @@ services:
     user: "0:0"
     volumes:
       - ${AIRFLOW_PROJ_DIR:-.}:/sources
+    networks:
+      - bridge-network
 
   airflow-cli:
     <<: *airflow-common
@@ -309,6 +356,8 @@ services:
       - bash
       - -c
       - airflow
+    networks:
+      - bridge-network
 
   # You can enable flower by adding "--profile flower" option e.g. docker-compose --profile flower up
   # or by explicitly targeted on the command line e.g. docker-compose up flower.
@@ -331,6 +380,8 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    networks:
+      - bridge-network
 volumes:
   postgres-db-volume:
   utils:
