--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -134,11 +134,9 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=file:/opt/bitnami/spark/spark-events -Dspark.history.ui.port=18080
     ports:
       - "8082:8080"
       - "7077:7077"
-      - "18080:18080"
     networks:
       - bridge-network
     depends_on:
@@ -150,6 +148,23 @@ services:
       - ./logs/log4j.properties:/opt/bitnami/spark/conf/log4j.properties
     env_file:
       - ./.env
+
+  spark-history-server:
+    image: bitnami/spark:3.5.5
+    container_name: spark-history-server
+    environment:
+      - SPARK_MODE=history-server
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=file:/opt/bitnami/spark/spark-events -Dspark.history.ui.port=18080
+    ports:
+      - "18080:18080"
+    volumes:
+      - ./logs/spark-events:/opt/bitnami/spark/spark-events
+      - ./logs/log4j.properties:/opt/bitnami/spark/conf/log4j.properties
+    networks:
+      - bridge-network
+    command: >
+      /opt/bitnami/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
+
       
   spark-worker:
     build:
