--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -135,8 +135,8 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
     ports:
-      - '8082:8080'
-      - '7077:7077'
+      - "8082:8080"
+      - "7077:7077"
     networks:
       - bridge-network
     depends_on:
@@ -144,10 +144,35 @@ services:
     volumes:
       - ./data_engineering:/opt/bitnami/spark/data_engineering
       - ./utils:/opt/bitnami/spark/utils
+      - ./logs/spark-events:/opt/bitnami/spark/spark-events
+      - ./logs/log4j.properties:/opt/bitnami/spark/conf/log4j.properties
     env_file:
       - ./.env
-  spark-worker:
+
+  spark-history-server:
     image: bitnami/spark:3.5.5
+    container_name: spark-history-server
+    environment:
+      - SPARK_MODE=history-server
+      - SPARK_HISTORY_OPTS=-Dspark.history.fs.logDirectory=file:/opt/bitnami/spark/spark-events -Dspark.history.ui.port=18080
+    ports:
+      - "18080:18080"
+    volumes:
+      - ./logs/spark-events:/opt/bitnami/spark/spark-events
+      - ./logs/log4j.properties:/opt/bitnami/spark/conf/log4j.properties
+    networks:
+      - bridge-network
+    command: >
+      /opt/bitnami/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
+
+      
+  spark-worker:
+    build:
+      context: ./data_engineering
+      dockerfile: Dockerfile
+      tags:
+        - "spark_worker:v1.0"
+    container_name: spark-worker
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
@@ -157,14 +182,19 @@ services:
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    networks:
-      - bridge-network
+      - SPARK_WORKER_OPTS=-Dspark.worker.cleanup.enabled=true -Dspark.worker.cleanup.interval=3600 -Dspark.worker.cleanup.appDataTtl=7200
     depends_on:
       - spark
-      - minio
+    ports:
+      - "8083:8081"
     volumes:
       - ./data_engineering:/opt/bitnami/spark/data_engineering
       - ./utils:/opt/bitnami/spark/utils
+      - ./logs/spark-events:/opt/bitnami/spark/spark-events
+      - ./logs/log4j.properties:/opt/bitnami/spark/conf/log4j.properties
+    networks:
+      - bridge-network
+    restart: unless-stopped
     env_file:
       - ./.env
 
