--- a/Pyproject.toml
+++ b/Pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^1.1.0"
 requests = "^2.32.3"
 apache-airflow = "^2.10.5"
 apache-airflow-providers-docker = "^4.2.0"
+boto3 = "^1.37.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
